--- a/css/common.css
+++ b/css/common.css
@@ -81,3 +81,189 @@ body {
   align-items: flex-start;
   gap: 48px;
 }
+/* <<<<<<<<<<<<<<<<<<<<<<<<<<<TASK3>>>>>>>>>>>>>>>>>>>>>> */
+#name-input {
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  padding-left: 16px;
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
+
+#name-input:hover {
+  border-color: #000;
+}
+/* <<<<<<<<<<<<<<<<<<<<<<<<TASK4>>>>>>>>>>>>>>>>>>>>>>>>>> */
+.login-form {
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.login-form > label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+}
+
+.login-form > label > input {
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding-left: 16px;
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+}
+
+.login-form > label > input:hover {
+  border-color: #000;
+}
+
+.login-form > button {
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  width: 86px;
+  margin-top: 8px;
+}
+
+.login-form > button:hover {
+  background-color: #6c8cff;
+}
+/* /* <<<<<<<<<<<<<<<<<<<<<TASK5>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
+.widget {
+  display: inline-flex;
+  padding: 100px 88px;
+  flex-direction: column;
+  border-radius: 8px;
+  background-color: #fff;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.widget > p {
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+}
+
+.widget > button {
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  width: 148px;
+}
+
+.widget > button:hover {
+  background-color: #6c8cff;
+}
+/* ***************************************************************************** */
+
+/* ******************************** TASK 6 ************************************* */
+#controls {
+  display: flex;
+  padding: 32px;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  background: #f6f6fe;
+  width: 486px;
+}
+
+#controls > input {
+  padding: 8px 72px;
+  border-radius: 8px;
+  border: 1px solid #808080;
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+}
+
+#controls > button {
+  display: flex;
+  width: 120px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  border-radius: 8px;
+  width: 120px;
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+}
+
+#controls :nth-child(2) {
+  background-color: #4e75ff;
+}
+
+#controls :nth-child(2):hover {
+  background-color: #6c8cff;
+}
+
+#controls :last-child {
+  background-color: #ff4e4e;
+}
+
+#controls :last-child:hover {
+  background-color: #ff7070;
+}
+
+#boxes {
+  display: flex;
+  width: 486px;
+  padding: 32px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 8px;
+  background: #f6f6fe;
+  width: 486px;
+}
